fix: mapbox and property cards on mobile

--- a/src/components/RxMapbox.module.scss
+++ b/src/components/RxMapbox.module.scss
@@ -1,5 +1,4 @@
 .MainWrapper {
-    @apply w-full h-full;
     
     .RxMapbox {
         @apply h-full w-full;
